test/Fail/Issue3572.err
Issue3572.agda:17.1-20.22: error: [TerminationIssue]
Termination checking failed for the following function:
  id
Problematic call:
  id (sq i1)
    (at Issue3572.agda:20.12-14)

Issue3572.agda:18.1-10: error: [UnequalTerms]
The terms
  id (sq i0)
and
  left
are not equal at type Interval
when checking the definition of id
